Move off deprecated API.
Closes #4164
Original pull request: #4165.